--- a/my_app/pubspec.yaml
+++ b/my_app/pubspec.yaml
@@ -1,4 +1,4 @@
-name: my_App
+name: my_app
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -30,13 +30,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  fl_chart: ^0.66.2
-  http: ^1.2.1
-  flutter_launcher_icons: ^0.13.1
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  shared_preferences: ^2.0.15
+  firebase_core: ^2.27.1
   cupertino_icons: ^1.0.2
+  cloud_firestore: ^4.15.9
 
 dev_dependencies:
   flutter_test:
@@ -47,20 +44,14 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^3.0.1
-
-flutter_icons:
-  android: true
-  ios: true
-  image_path: "icons/pokéball_icon.png"
+  flutter_lints: ^2.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter packages.
 flutter:
-  assets:
-    - assets/images/
+
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
